# PDG

./: .gitignore  AGENTS.md  Anteproyecto-PdG-I-2026-1.docx  CLAUDE.md  DEPLOY_RENDER.md  Plan de Pruebas Exordium.txt  docker-compose.yml  render.yaml  sync-demo.sh
backend/: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  backend_ai_context.md  demo.db  docker-compose.yml  plan_pruebas.md  pyproject.toml  requirements-demo.txt  seed_admin.py  seed_demo.py  test_admin.py  test_create.py  test_curl.py  test_domain_error.py  test_endpoint.py  test_get_model.py  test_script.py
backend/.husky/: pre-commit
backend/alembic/: env.py
backend/alembic/versions/: 20260330_0001_users_projects_permissions_init.py  20260331_0002_maturity_questionnaire_init.py  20260331_0003_projects_artifacts_permissions.py  20260331_0004_maturity_catalog_template.py  20260331_0005_maturity_dimension_weight_overrides.py  20260331_0006_maturity_custom_roles_override.py  20260331_0007_maturity_score_criteria_override.py  20260331_0008_maturity_question_score_criteria_override.py  20260331_0009_conceptual_model_init.py  20260331_0010_conceptual_comments.py  20260331_0011_conceptual_comment_version_context.py  20260401_0009_dfd_models_init.py  20260401_0010_logical_data_model_init.py  20260401_0011_logical_model_comments_versions.py  20260413_0012_brechas_artifacts_init.py  20260422_0013_inventory_matrix_and_glossary_init.py  20260501_0014_maturity_dynamic_score_constraints.py  20260501_0015_maturity_respondent_comments.py  20260502_0016_remove_pending_user_status.py  20260503_0017_companies_init.py  20260511_0018_add_asis_logical_data_model_artifact.py  20260514_0019_raci_cell_comments.py  36dde1ac8524_merge_raci_and_main_heads.py  (+5 more)
backend/app/: data_initializer.py  main.py
backend/docs/: COMPONENTES_UML.md  ESPECIFICACION_DIAGRAMA_COMPONENTES.md
backend/scripts/: mock_document_retailtech.txt  predeploy.sh  seed_mock_project.py
backend/tests/: conftest.py
(+488 files in other folders)
